# libsomadspio

./: .gitmodules  CMakeLists.txt  DESIGN  Makefile  README  somadspio-1.0.pc.in
debian/: changelog  control
somadspio/: CMakeLists.txt  acqdatasource.cc  acqdatasource.h  dspboard  dspcontrol.cc  dspcontrol.h  eventcodec.cc  eventcodec.h  eventpreddisp.cc  eventpreddisp.h  logging.cc  logging.h  mockdspboard.cc  mockdspboard.h  tspikesink.cc  tspikesink.h  types.h  wavesink.cc  wavesink.h
tests/: CMakeLists.txt  mockdspboard.cc  mockdspboard.h  runtest.cc  test_acqdatasource.cc  test_eventdispatch.cc  test_simple.cc  test_tspikesink.cc
